# ChangeLog for dev-python/pytaglib
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*pytaglib-1.0.3 (28 Apr 2015)

  28 Apr 2015; Johann Schmitz <ercpe@gentoo.org> +metadata.xml,
  +pytaglib-1.0.3.ebuild:
  New ebuild for pytaglib